--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Agrofarming</title>
+    <title>Hisau</title>
     <meta name="description" content="Agriculture buisness Website">
     <meta name="keywords" content="Buisness Agriculture Farming">
     
