--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- END nav -->
     
 
-    <section class="probootstrap-cover overflow-hidden relative"  style="background-image: url('assets/images/logo.png');"  id="section-home">
+    <section class="probootstrap-cover overflow-hidden relative"  style="background-image: url('assets/images/logo1.jpg');"  id="section-home">
       <div class="overlay"></div>
       <div class="container">
         <div class="row align-items-center">
