--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Hisau</title>
+    <title>Hisau Private Limited</title>
     <meta name="description" content="Agriculture buisness Website">
     <meta name="keywords" content="Buisness Agriculture Farming">
     
@@ -34,7 +34,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark probootstrap_navbar" id="probootstrap-navbar">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Hisau PVT LTD</a>
+        <a class="navbar-brand" href="index.html">Hisau Private Limited</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#probootstrap-menu" aria-controls="probootstrap-menu" aria-expanded="false" aria-label="Toggle navigation">
           <span><i class="ion-navicon"></i></span>
         </button>
